--- a/highscores.html
+++ b/highscores.html
@@ -8,20 +8,19 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
-<title>Quiz</title>
+<title>Highscores</title>
 </head>
 <body>
 
     <header>
-        <h1>Quiz</h1>
+        <h1>Highscores</h1>
         <nav>
-            <li><a href="highscores.html">Highscores</a></li>
+            <li><a href="index.html">Return to quiz</a></li>
         </nav>
     </header>
     <main>
 
     </main>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
