--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
-<title>Quiz</title>
+<title>Guitar Quiz</title>
 </head>
 <body>
 
     <header>
-        <h1>Quiz</h1>
+        <h1>Guitar Quiz</h1>
         <nav>
             <li><a href="highscores.html">Highscores</a></li>
         </nav>
