Added question button rendering

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
 
     <!-- Starts hidden -->
     <section id="quiz">
-        <h1>QUIIIIIIZS</h1>
+        <h1>Questions</h1>
         <p id="timer"></p>
-        <section id="question-window">
-            <p>TEST CLEAR</p>
+        <section>
+            <section id="question"><p>Testing</p></section>
+            <section id="choices"></section>
         </section>
     </section>
 
