Added more questions, buttons click events work correctly, quiz now ends and show score, some other cleanup

--- a/index.html
+++ b/index.html
@@ -37,9 +37,14 @@
         <h1>Questions</h1>
         <p id="timer"></p>
         <section>
-            <section id="question"><p>Testing</p></section>
+            <section id="question"></section>
             <section id="choices"></section>
         </section>
+    </section>
+
+    <!-- Starts hidden -->
+    <section id="score">
+        
     </section>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
