Fixed scoring to count unanswered as wrong. Added more questions

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
     <!-- Starts hidden -->
     <section id="quiz">
-        <h1>Questions</h1>
         <p id="timer"></p>
         <section>
             <section id="question"></section>
@@ -44,9 +43,7 @@
     </section>
 
     <!-- Starts hidden -->
-    <section id="score">
-
-    </section>
+    <section id="score"></section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
