--- a/highscores.html
+++ b/highscores.html
@@ -17,8 +17,10 @@
         <nav>
             <li><a href="index.html">Return to quiz</a></li>
         </nav>
+        <div><button type="button" id="refresh-btn" class="btn btn-primary btn-lg">Refresh</button></div>
     </header>
-    <main>
+    <main id="scores">
+
 
     </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
