--- a/index.html
+++ b/index.html
@@ -15,21 +15,13 @@
 
 
 <body>
-    <header class="container my-5">
-        <div class="row">
-            <div class="col-12 col-md-8 col-xl-9">
-                <h1>Guitar Quiz</h1>
-            </div>
-            <div class="col-12 col-md-8 col-xl-9">
-                <nav>
-                    <li><a href="highscores.html">Highscores</a></li>
-                </nav>
-            </div>
-        </div>
-    </header>
     <section class="container">
+        <div class="row justify-content-center"> 
+            <h1>Guitar Quiz</h1>
+        </div>
         <div class="row justify-content-center">
             <div><button type="button" id="start-btn" class="btn btn-primary btn-lg">Start Quiz</button></div>
+            <div><a href="highscores.html"><button type="button" id="return-btn" class="btn btn-secondary btn-lg">Highscores</button></a></div>
         </div>
     </section>
 
