--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 
 <body>
     <section class="container">
-        <div class="row justify-content-center"> 
+        <div class="row justify-content-center">
             <h1>Guitar Quiz</h1>
         </div>
         <div class="row justify-content-center">
             <div><button type="button" id="start-btn" class="btn btn-primary btn-lg">Start Quiz</button></div>
-            <div><a href="highscores.html"><button type="button" id="return-btn" class="btn btn-secondary btn-lg">Highscores</button></a></div>
+            <div><a href="highscores.html"><button type="button" id="return-btn"
+                        class="btn btn-secondary btn-lg">Highscores</button></a></div>
         </div>
     </section>
 
@@ -34,8 +35,26 @@
         </section>
     </section>
 
-    <!-- Starts hidden -->
-    <section id="score"></section>
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel">You scored: <span id=theirScore></span> Enter a name to save your score!</h5>
+            </div>
+            <div class="modal-body">
+                <input type="text" id="username" name="username">
+                <h5 id = "noName">Please enter a username.</h5>
+            </div>
+            <div class="modal-footer">
+                <button type="button" id= "modalCancel" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" id="modalOk" class="btn btn-primary">Okay</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
