Improved layout of quiz questions page

--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
     </section>
 
     <!-- Starts hidden -->
-    <section id="quiz">
-        <p id="timer"></p>
-        <section>
-            <section id="question"></section>
-            <section id="choices"></section>
-        </section>
+    <section id="quiz" class="container">
+        <div class="row justify-content-center">
+            <h1 id="questionHeader"></h1>
+            <p id="timer"></p>
+        </div>
+        <section id="question"class="row justify-content-center"></section>
+        <section id="choices" class="col-12 d-flex justify-content-center flex-column"></section>
     </section>
 
     <!-- Modal -->
