--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     <!-- Starts hidden -->
     <section id="quiz" class="container">
         <div class="row justify-content-center">
-            <h1 id="questionHeader"></h1>
-            <p id="timer"></p>
+            <h1 id="timer"></h1>
         </div>
         <section id="question"class="row justify-content-center"></section>
         <section id="choices" class="col-12 d-flex justify-content-center flex-column"></section>
