Updated html formatting

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <title>Guitar Quiz</title>
 </head>
 
-
-
 <body>
     <section class="container">
         <div class="row justify-content-center">
@@ -25,37 +23,35 @@
                         class="btn btn-secondary btn-lg">Highscores</button></a></div>
         </div>
     </section>
-
     <!-- Starts hidden -->
     <section id="quiz" class="container">
         <div class="row justify-content-center">
             <h1 id="timer"></h1>
         </div>
-        <section id="question"class="row justify-content-center"></section>
+        <section id="question" class="row justify-content-center"></section>
         <section id="choices" class="col-12 d-flex justify-content-center flex-column"></section>
     </section>
-
     <!-- Modal -->
     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">You scored: <span id=theirScore></span> Enter a name to save your score!</h5>
-            </div>
-            <div class="modal-body">
-                <input type="text" id="username" name="username">
-                <h5 id = "noName">Please enter a username.</h5>
-            </div>
-            <div class="modal-footer">
-                <button type="button" id= "modalCancel" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" id="modalOk" class="btn btn-primary">Okay</button>
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">You scored: <span id=theirScore></span> Enter a
+                        name to save your score!</h5>
+                </div>
+                <div class="modal-body">
+                    <input type="text" id="username" name="username">
+                    <h5 id="noName">Please enter a username.</h5>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="modalCancel" class="btn btn-secondary"
+                        data-bs-dismiss="modal">Close</button>
+                    <button type="button" id="modalOk" class="btn btn-primary">Okay</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
-
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
